packages/preview/hei-synd-thesis/0.2.1/CHANGELOG.md
# Changelog

All notable changes to this project will be documented in this file.

## [0.2.1] - 2025-06-20

### 🚀 Features

- *(template)* Add codly& cheq package, customize codelst ([6393b3c](https://github.com/hei-templates/hei-synd-thesis/commit/6393b3cf3e01a519f9da0a4853084e6a4426b5fb) - zas)
- *(template)* Add syntax files within helpers ([eb7150b](https://github.com/hei-templates/hei-synd-thesis/commit/eb7150b8b0dd5154e8ef4eb56c8135287df8267e) - zas)

### 🐛 Bug Fixes

- *(ci)* Remove typst version to use always latest ([da9fc8d](https://github.com/hei-templates/hei-synd-thesis/commit/da9fc8d486e772d4d2deae4a99ec3ec21fb125ef) - Klagarge)
- *(template)* Sample content ([2641cbe](https://github.com/hei-templates/hei-synd-thesis/commit/2641cbe7a383b591ad55c5c46eb73cae395e9b76) - zas)
- *(just)* Watch also opens the file ([4296458](https://github.com/hei-templates/hei-synd-thesis/commit/42964589ef57829dbfb3769cab20dfc5c4a9ba04) - zas)
- *(template)* Option comments ([1327420](https://github.com/hei-templates/hei-synd-thesis/commit/132742064e04b2f37a072919f9f855c550b6dcdb) - zas)

### 💼 Other

- Merge branch fix/typst-version

fix(ci): remove typst version to use always latest ([2c3178b](https://github.com/hei-templates/hei-synd-thesis/commit/2c3178b404e3c26c04eac0496b98abe073919609) - Klagarge)
- Merge remote-tracking branch 'origin/main' into fix/deployment ([1d9bc46](https://github.com/hei-templates/hei-synd-thesis/commit/1d9bc469aea289f405921b2395c957a6093c52ab) - zas)

### 🚜 Refactoring

- *(just)* Only copy required files ([d4de112](https://github.com/hei-templates/hei-synd-thesis/commit/d4de11274fc352427ea07f0a33fe2189199f20b1) - zas)

### ⚙️ Miscellaneous Tasks

- *(release)* Update sample images ([bdeba65](https://github.com/hei-templates/hei-synd-thesis/commit/bdeba656d3c6b15aa875ac0c352201bc87a289c5) - zas)




**Full Changelog**: [0.2.0...0.2.1](https://github.com/hei-templates/hei-synd-thesis/compare/0.2.0...0.2.1)

## [0.2.0] - 2025-06-10

### 🚀 Features

- Feat(date): add date in multiple languages thanks to icu-datetime package
  feat(gender): add the possibility to define the gender which adds gender inclusive words for fr, de and en ([4090ea8](https://github.com/hei-templates/hei-synd-thesis/commit/4090ea8aa5e880afc341877505e281f9490790d2) - zas)
- *(just)* Add typst inputs ([edf815c](https://github.com/hei-templates/hei-synd-thesis/commit/edf815c5eba3536dfef6b931a7720583a9e51fed) - zas)
- *(cliff)* Add cliff config to support legacy commits ([ac8a9e2](https://github.com/hei-templates/hei-synd-thesis/commit/ac8a9e22d79409e389786008a739ca5a95909c81) - zas)
- *(ignore)* Add gitignore ([6c16501](https://github.com/hei-templates/hei-synd-thesis/commit/6c165010a524cad63d7f797bca5bd060f4a7cd04) - zas)
- *(just)* Cliff functionality ([ab8b629](https://github.com/hei-templates/hei-synd-thesis/commit/ab8b6296f4fe4e5ae4284743135de545aca46ae7) - zas)

### 🐛 Bug Fixes

- *(tianji)* New url for tianji ([d21ecd9](https://github.com/hei-templates/hei-synd-thesis/commit/d21ecd923bc3c2832867a246cd2af86fba42cd0d) - zas)

### 💼 Other

- Merge pull request #9 from hei-templates/fix/2025-zas

feat(date): add date in multiple languages thanks to icu-datetime package
feat(gender): add the possibility to define the gender which adds gender inclusive words for fr, de and en ([f0e05fc](https://github.com/hei-templates/hei-synd-thesis/commit/f0e05fcd328750320a30da57df7e16d2c1c58577) - Klagarge)

- *(links)* Add link checker workflow with issue reporting ([888b570](https://github.com/hei-templates/hei-synd-thesis/commit/888b570feda71798bbfffdf6820e3d9aa32e5ee7) - Klagarge)
- *(release)* Add release workflow with build and changelog ([bfedac9](https://github.com/hei-templates/hei-synd-thesis/commit/bfedac90c6016cb6c175d58bf9d109a75dc8c63c) - Klagarge)
- *(release)* Add build matrix ([2fec06c](https://github.com/hei-templates/hei-synd-thesis/commit/2fec06c5c9bbe24bcb2609e45be46ae65aea8c1e) - Klagarge)
- *(release)* Fix typo about release version env ([8fd6fc1](https://github.com/hei-templates/hei-synd-thesis/commit/8fd6fc10997e57aaed49691095ab07c4e5863849) - Klagarge)

### 🚜 Refactoring

- *(version)* Centralise version number in metadata.typ ([9c04cd7](https://github.com/hei-templates/hei-synd-thesis/commit/9c04cd748718e7a42ce8fef5d858019585d20d38) - Klagarge)
- *(config)* Fix repo URL and change commit splitting behavior ([5024037](https://github.com/hei-templates/hei-synd-thesis/commit/50240372016e0e7a0af5703505685d69ecdab47d) - Klagarge)
- *(lib)* Remove unused option-scripts ([43fd7df](https://github.com/hei-templates/hei-synd-thesis/commit/43fd7dfe9e4fb1befdd137a32b56fde0f544920a) - zas)

### 📚 Documentation

- *(readme)* Update with latest features ([335074b](https://github.com/hei-templates/hei-synd-thesis/commit/335074bb705593273ac7f33bb81b272c5887ed15) - zas)

### ⚙️ Miscellaneous Tasks

- *(release)* Bump version to 0.2.0 ([6292a69](https://github.com/hei-templates/hei-synd-thesis/commit/6292a69d0b21c7709c94e0da9c31a68d330b6781) - zas)

**Full Changelog**: [0.1.1...0.2.0](https://github.com/hei-templates/hei-synd-thesis/compare/0.1.1...0.2.0)

## [0.1.1] - 2025-02-24

### 🚀 Features

- *(telemetry)* Visitor counter

### 🐛 Bug Fixes

- *(kebab-case)* Following typst convention
- *(telemetry)* Visitorlink
- *(tianji)* Link to tianji
- *(tianji)* Link to tianji
- *(typst)* Compatibility with typst 0.13.0
- *(template)* Update to new template version number
- *(packages)* Update packages to the latest version glossarium & fracturist
- *(import)* Wrong package imported hei-synd-report instead of hei-synd-thesis

### ⚙️ Miscellaneous Tasks

- *(changelog)* Release 0.1.1

## [0.1.0] - 2025-02-03

### 🚀 Features

- *(glossarium)* Add glossarium for the acronym and glossary function replacing the legacy acr-* tools
- *(page)* Summary page
- *(template)* Additional feature such as add_chapter, new logos ,etc.
- *(lang)* Add i18n features
- *(lang)* I18n for all elements found in the template (de, en, fr)
- *(draft)* Add informations on how to write each section in the draft version of the thesis
- *(metadata)* All metadata is optional and can be omitted
- *(box)* Add personnal todo and table of todos
- *(template)* Change page numbering before toc

### 🐛 Bug Fixes

- Fix justfile
- *(template)* Compatible with typst 0.12
- *(readme)* Typos and image placement
- *(bibliography)* Remove examples
- *(toc)* Maxdepth of toc
- *(readme)* Fix some links
- *(glossary)* Fix heading level for groupes title
- *(image)* Remove equal salary from the bottom-right logo

### 💼 Other

- Initial commit
- :tada: inital commit
- More information in the readme, better images
- File extension
- Logo positions
- File links
- File download link
- For typst v0.8.0
- Install description in readme
- License change
- Author information
- Fonts
- Proper logos  supporting github darkmode
- Readme
- Adapted for typst v0.9.0
- Karnaugh
- Paragraph spacing from 0.55em to 1em
- Sections for Titlepage
- Vhdl code syntax highlighting
- Raw settigns
- Thesis title
- For 2024 edition
- Latest version of guide_to_...
- More detailed instruction for windows (vscode gitbash ps in admin mode)
- Typos
- Merge pull request #4 from Klagarge/typos
- Typo in dean name + fix justfile
- Link typos for guide to typst
- UPD tablex from preview
- CHG use glossarium package
- RM sections
- UPD glossarium to 0.4.2
- FIX path to absolute
- ADD placeholder constant
- ADD specifications + summary
- ADD todo function
- Red callout for writter
- FIX minitoc
- ADD function to add-chapter
- ADD subtitle
- CHG refactor with add-chapter
- FIX subtitle + dates
- ADD midterm title page version
- ADD flexible type of report
- UPD logos to svg
- FIX title page and abstract
- FIX heading indent and TOC
- FIX full-page and add-chapter
- FIX summary
- ADD Todo example
- UPD glossary
- UPD Typst 0.12
- *(template)* Adapt project for the typst universe

### 🚜 Refactor

- *(template)* Big refactor to uniform typst code from Remi across all templates
- *(template)* Move functions to different files where they make more sense
- *(template)* Page-* change to one file per templates pages-*
- *(template)* Move 00-templates into a the subfolder
- *(template)* Add 03-tails into the 00-global-template also to be distributed automatically
- *(template)* All path are absolute to the project source
- *(template)* Remove all tablex uses in the templates
- *(item)* Items have a body

### ⚙️ Miscellaneous Tasks

- *(font)* Add new libertinus font
- *(bibliography)* Remove soa of soa by a own publication
- *(typst)* Change function and variable names according to conventions
- *(img)* Add sample and thumbnail images as well as latest version of all logos
- *(release)* Add changelog
- *(thumbnail)* Update thumbnail
- *(sample)* Update sample
- *(readme)* Add last extentions to the readme
- *(release)* Add changelog for 0.1.0 release
